[gd_scene load_steps=6 format=3 uid="uid://c7543ie3r3cy8"]

[ext_resource type="Texture2D" uid="uid://bs86oj71qxjtc" path="res://Assets/tojam25_emailLayout.png" id="1_7vn2l"]
[ext_resource type="Script" uid="uid://bvcx84t22joiu" path="res://Scenes/email_screen_level_1.gd" id="1_sxa53"]
[ext_resource type="Texture2D" uid="uid://inkkumrsb03e" path="res://Assets/tojam25_emailLayoutRef.png" id="2_2a6tj"]
[ext_resource type="FontFile" uid="uid://cby3c4hxa2ie0" path="res://Fonts/pixelfontmedium.ttf" id="2_3utcs"]
[ext_resource type="PackedScene" uid="uid://1dopslnjq3w3" path="res://Scenes/emails.tscn" id="4_3utcs"]

[node name="EmailScreenLevel1" type="Node2D"]
script = ExtResource("1_sxa53")

[node name="EmailLayout" type="Sprite2D" parent="."]
texture = ExtResource("1_7vn2l")
centered = false

[node name="LabelFrom" type="Label" parent="EmailLayout"]
offset_left = 813.0
offset_top = 227.0
offset_right = 1753.0
offset_bottom = 290.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3utcs")
theme_override_font_sizes/font_size = 32
text = "Place"
vertical_alignment = 1

[node name="LabelTo" type="Label" parent="EmailLayout"]
offset_left = 781.0
offset_top = 308.0
offset_right = 1721.0
offset_bottom = 371.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3utcs")
theme_override_font_sizes/font_size = 32
text = "Place"
vertical_alignment = 1

[node name="LabelSubject" type="Label" parent="EmailLayout"]
offset_left = 691.0
offset_top = 390.0
offset_right = 1631.0
offset_bottom = 453.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3utcs")
theme_override_font_sizes/font_size = 32
text = "Place"
vertical_alignment = 1

[node name="LabelBody" type="Label" parent="EmailLayout"]
offset_left = 685.0
offset_top = 475.0
offset_right = 1768.0
offset_bottom = 930.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3utcs")
theme_override_font_sizes/font_size = 32
text = "Place"
vertical_alignment = 1

[node name="TextureButtonExit" type="TextureButton" parent="EmailLayout"]
offset_left = 1718.0
offset_top = 129.0
offset_right = 1791.0
offset_bottom = 201.0

[node name="Tojam25EmailLayoutRef" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_2a6tj")
centered = false

[node name="Emails" parent="." instance=ExtResource("4_3utcs")]

[connection signal="pressed" from="EmailLayout/TextureButtonExit" to="." method="_on_texture_button_exit_pressed"]
